3-port-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-pod-nodeport-service 
spec:
  type: NodePort 
  selector:
    type: frontend
  ports: 
    - name: http
      port: 80 # Service Port
      targetPort: 3000 # Container Port
      nodePort: 31231 # NodePort
