load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: webtest
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    type: frontend  
  type: LoadBalancer
